[QT] Possible Leaks WKRetainPtr<> should Adopt allocated Copy https://bugs.webkit.org/show_bug.cgi?id=65790

Reviewed by Sam Weinig.

Fix a leak by adopting an allocation instead of retaining it.

* UIProcess/qt/qwkhistory.cpp:
(QWKHistoryItem::title):
(QWKHistoryItem::url):


Canonical link: https://commits.webkit.org/81669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92574 268f45cc-cd09-0410-ab3c-d52691b4dbfc